# bibliotheque-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  tags.py
.github/workflows/: ci-cd.yml
app/: database.py  main.py
app/core/: auth.py  init_admin.py  security.py
app/models/: Books.py  tags.py  users.py
app/routers/: admin.py  auth.py  books.py  health.py  search.py  tags.py  users.py
app/schemas/: Books.py  tags.py  users.py
app/services/: googlebook.py  openlibrary.py  storage.py
tests/: test_books.py  test_routes_basic.py  test_schemas_books.py  test_schemas_tags.py  test_schemas_users.py  test_tags.py  test_users.py
