[project]
name = "bibliotheque-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt==4.0.1",
    "fastapi>=0.128.0",
    "passlib>=1.7.4",
    "psycopg[binary]>=3.3.2",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "python-jose>=3.5.0",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.1",
]

[tool.ruff]
line-length = 80 
target-version = "py311"

exclude = [
    ".venv",
    "__pycache__",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
]

ignore = [
    "E501",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
